code/kubernetes/ingress/simpleIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
  namespace: hive
  labels:
    name: hive-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hive.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hive-io-frontend-svc
            port: 
              number: 8080
